Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135578

Possible QTimer ABI break between Qt 6.7 and Qt 6.9

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.4, 6.9.1, 6.10.0 FF
    • 6.8.3, 6.9.0
    • Core: Other
    • None
    • Windows
    • 1
    • 27ed0014b (dev), bb46df6a7 (6.9), 735566ee0 (6.8)
    • Foundation Sprint 129

      A simple program that uses `std::chrono` overload of `QTimer::singleShot` and built with Qt 6.7.3 cannot run with Qt 6.9.0 because of the missing symbol.

      I think that 25b8d3743455bd2a4a327e1068fc83acb2f1c481 introduced the breaking change.

       

       

        For Gerrit Dashboard: QTBUG-135578
        # Subject Branch Project Status CR V

            mmutz Marc Mutz
            def.tf Ivan Vizir
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes